color palette update

--- a/cardio-digital-fit/index.html
+++ b/cardio-digital-fit/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>The Polished Review Case Study | Ariele Martinez-Bugay</title>
+  <title>Cardio Digital Fit Case Study | Ariele Martinez-Bugay</title>
   <!--Favicon info-->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
@@ -45,7 +45,7 @@
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
               <li>
-                <a href="http://www.arielemartinez.com">Return to Main Page</a>
+                <a href="https://www.arielemartinez.com">Return to Main Page</a>
               </li>
             </ul>
           </div>
@@ -55,16 +55,14 @@
       </nav>
 
       <div class="jumbotron">
-        <h1>The Polished Review Case Study</h1>
+        <h1>Cardio Digital Fit Case Study</h1>
       </div>
       <!--ABOUT-->
       <div class="container-fluid process-cont">
-        <a href="http://www.thepolishedreview.com" target="_blank">
         <img src="img/polirevi-mockup.png" class="img-responsive" />
-      </a>
         <h1>Overview</h1>
         <p>
-          Logo design and blog styling for a beauty blog focusing exclusively on nail polish.
+          E-Commerce design for a store 
         </p>
         <h1>Problem</h1>
         <p>
@@ -76,7 +74,7 @@
         </p>
         <h1>Team &amp; Role</h1>
         <p>
-          I worked as a one-woman team on this project.
+          I worked in collaboration with the business owner on this project.
         </p>
         <p>
           Roles:
@@ -88,7 +86,7 @@
         </p>
         <h1>Constraints</h1>
         <p>
-           There is no specific niche set just yet within the realm of nail polish blogs. The site's main role right now is in displaying nail art. The owner just wanted a simple blog design to start, with room to grow as time passes. There was also a time crunch, so I used a WordPress.org template out of the door but plan to switch to a custom design soon.
+           
         </p>
         <h1>Design Process</h1>
         <p>
@@ -118,7 +116,7 @@
             </div>
             <div class="col-sm-6 projnav-right">
               <p>
-                <a href="../campus-perks/index.html" class="projnav">Previous Project: Campus Perks<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>
+                <a href="../boule-bakery/index.html" class="projnav">Previous Project: Boule Bakery<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>
               </p>
             </div>
           </div><!-- close row -->
