--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <img src="img/headshot-amb.jpeg" class="img-responsive img-circle" />
           </div>
           <div class="col-md-6" id="bio">
-            <p>Welcome! I am a front-end developer and designer in Philadelphia with a love for UX and code.
+            <p>Welcome! I am a front-end developer and designer based in Pennsylvania with a love for UX and code.
               My background includes Startup Institute New York's Web Design Track, a BA in Psychology from Bryn Mawr College, and experience in non-profit development and education.</p>
               <p>Outside of wrangling code, you can find me staring at the night sky, mixing new bath &amp; body products in my kitchen, devouring Belgian fries, nose deep in a book at a park, or biking around the city.</p>
               <p>
