--- a/campus-perks/index.html
+++ b/campus-perks/index.html
@@ -133,8 +133,8 @@
       </div>
       <!--FOOTER-->
       <div class="footer">
-        <p>&copy;2017 Ariele Martinez. Made with &#9829; in Brooklyn. Powered by the Milennium Crystal.</p>
-      </div>
+          <p>&copy;<script>document.write(new Date().getFullYear())</script> Ariele Martinez-Bugay. Made with &#9829; in Philadelphia. Powered by the Milennium Crystal.</p>
+        </div>
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
       <script src="../js/bootstrap.min.js"></script>
