--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Ariele Martinez-Bugay | Front-End Developer &amp; Designer</title>
+  <title>Ariele Martinez-Bugay | Front-End Developer &amp; Digital Marketing Specialist</title>
   <script src="https://use.fontawesome.com/250f7d0f0a.js"></script>
   <!--Favicon info-->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -69,12 +69,9 @@
             <img src="img/headshot-amb.jpeg" class="img-responsive img-circle" />
           </div>
           <div class="col-md-6" id="bio">
-            <p>Welcome! I am a front-end developer and designer based in Pennsylvania with a love for UX and code.
+            <p>Welcome! I am a front-end web developer and digital marketing specialist based in Pennsylvania with a love for UX and code.
               My background includes Startup Institute New York's Web Design Track, a BA in Psychology from Bryn Mawr College, and experience in non-profit development and education.</p>
-              <p>Outside of wrangling code, you can find me staring at the night sky, mixing new bath &amp; body products in my kitchen, devouring Belgian fries, nose deep in a book at a park, or biking around the city.</p>
-              <p>
-                <a href="MartinezResume.pdf" class="resume" target="_blank">VIEW FULL RESUME &gt;&gt;</a>
-              </p>
+              <p>Outside of wrangling code, you can find me staring at the night sky, baking everything bagels in my kitchen, nose deep in a book, or hiking in the woods.</p>
             </div>
           </div>
         </div>
@@ -170,7 +167,7 @@
         </div>
         <!--FOOTER-->
         <div class="footer">
-          <p>&copy;<script>document.write(new Date().getFullYear())</script> Ariele Martinez-Bugay. Made with &#9829; in Philadelphia. Powered by the Milennium Crystal.</p>
+          <p>&copy;<script>document.write(new Date().getFullYear())</script> Ariele Martinez-Bugay. Made with &#9829; in Pennsylvania. Powered by the Milennium Crystal.</p>
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
